--- a/src/Setup/Styles/index.css
+++ b/src/Setup/Styles/index.css
@@ -1,6 +1,5 @@
-/* Quiz CSS Below */
+/* Quiz CSS Here */
 
-/* General Body Styling */
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -15,17 +14,16 @@ body {
 }
 
 body {
-  background-color: rgb(61, 61, 65);
+  background-color: #7cc6fe;
   display: flex;
   justify-content: center;
   align-items: center;
   min-height: 100vh;
 }
 
-/* Main App Styling */
 .app {
   background-color: #252d4a;
-  width: 700px;
+  width: 450px;
   min-height: 200px;
   height: min-content;
   border-radius: 15px;
@@ -33,8 +31,6 @@ body {
   box-shadow: 10px 10px 42px 0px rgba(0, 0, 0, 0.75);
   display: flex;
   justify-content: space-evenly;
-  border: 1px solid turquoise;
-  flex-direction: column;
 }
 
 .score-section {
@@ -45,7 +41,6 @@ body {
 
 /* QUESTION/TIMER/LEFT SECTION */
 .question-section {
-  padding-left: 1%;
   width: 100%;
   position: relative;
 }
@@ -88,7 +83,6 @@ button {
   border-radius: 15px;
   display: flex;
   padding: 5px;
-  margin: 5px;
   justify-content: flex-start;
   align-items: center;
   border: 5px solid #234668;
